--- a/css/style.css
+++ b/css/style.css
@@ -868,7 +868,7 @@ h6 {
   padding: 10px;
   font-family: "-apple-system,system-ui,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,sans-serif,BlinkMacSystemFont,Helvetica Neue,PingFang SC,Hiragino Sans GB,Microsoft YaHei,Arial";
   border-radius: 5px;
-  background: rgba(248, 245, 236, 0.6);
+  background: rgba(77, 80, 87, 0.1);
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.125);
   word-wrap: break-word;
   box-sizing: border-box;
@@ -929,7 +929,7 @@ h6 {
   border-bottom: 0;
 }
 .post .post-content a {
-  color: #c05b4d;
+  color: #4d5057;
   word-break: break-all;
 }
 .post .post-content a:hover {
