--- a/css/style.css
+++ b/css/style.css
@@ -1567,9 +1567,13 @@ h6 {
   }
 }
 .tag-cloud {
-  margin: 2em 0 3em;
   text-align: center;
   font-family: "-apple-system,system-ui,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,sans-serif,BlinkMacSystemFont,Helvetica Neue,PingFang SC,Hiragino Sans GB,Microsoft YaHei,Arial";
+  position: fixed;
+  top: 150px;
+  width: 200px;
+  margin-left: 585px;
+  padding: 10px;
 }
 .tag-cloud .tag-cloud-title {
   display: inline-block;
